--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "nav-frontend-alertstriper-style": "^2.0.17",
     "nav-frontend-core": "^4.0.13",
     "nav-frontend-ikoner-assets": "^1.0.5",
+    "nav-frontend-lenker": "^1.0.41",
+    "nav-frontend-lenker-style": "^0.2.29",
     "nav-frontend-paneler-style": "^0.3.21",
     "nav-frontend-typografi": "^2.0.25",
     "nav-frontend-typografi-style": "^1.0.22",
