--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "version": "1.3.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^5.6.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "babel-polyfill": "^6.26.0",
     "browserslist": "^4.13.0",
     "classnames": "^2.2.6",
+    "craco-less": "^1.17.0",
+    "less": "^3.12.2",
     "nav-frontend-alertstriper": "^3.0.22",
     "nav-frontend-alertstriper-style": "^2.0.17",
     "nav-frontend-core": "^4.0.13",
@@ -28,10 +31,10 @@
     "styled-components": "^5.1.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
+    "eject": "craco eject",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
