--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-responsive": "^8.1.0",
     "react-reveal": "^1.2.2",
     "react-scripts": "^3.4.1",
     "styled-components": "^5.1.1"
