--- a/package.json
+++ b/package.json
@@ -13,13 +13,19 @@
     "classnames": "^2.2.6",
     "craco-less": "^1.17.0",
     "less": "^3.12.2",
-    "nav-frontend-core": "^5.0.1",
+    "lodash.throttle": "^4.1.1",
+    "nav-frontend-core": "^5.0.5",
+    "nav-frontend-hjelpetekst": "^2.0.37",
+    "nav-frontend-hjelpetekst-style": "^2.0.29",
     "nav-frontend-ikoner-assets": "^1.0.5",
+    "nav-frontend-js-utils": "^1.0.13",
     "nav-frontend-lenker": "^1.0.41",
     "nav-frontend-lenker-style": "^0.2.29",
     "nav-frontend-paneler-style": "^0.3.21",
+    "nav-frontend-popover": "0.0.32",
+    "nav-frontend-popover-style": "0.0.8",
     "nav-frontend-typografi": "^2.0.25",
-    "nav-frontend-typografi-style": "^1.0.22",
+    "nav-frontend-typografi-style": "^1.0.25",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
