--- a/.github/workflows/on-pus-to-master.yml
+++ b/.github/workflows/on-pus-to-master.yml
@@ -26,4 +26,9 @@ jobs:
 
       - run: npm ci
       - run: npm run build
-      - run: npm run deploy
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./public
