--- a/.github/workflows/on-push-to-master.yml
+++ b/.github/workflows/on-push-to-master.yml
@@ -3,7 +3,7 @@ name: github pages
 on:
   push:
     branches:
-      - master
+      - update-action
 
 jobs:
   deploy:
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Setup Node
-        uses: actions/setup-node@v2.1.0
+        uses: actions/setup-node@v2
         with:
           node-version: '12.x'
 
